--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "debugoff"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 description = "Linux anti-analysis and anti-debugging Rust library"
 documentation = "https://docs.rs/debugoff"
@@ -22,6 +22,7 @@ goldberg = { version = "0.1", optional = true }
 
 [features]
 obfuscate = ["goldberg"]
+syscallobf = []
 
 [profile.release]
 debug = false
